--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,18 @@
             "Mateodioev\\StringVars\\": "src/"
         }
     },
-    "minimum-stability": "dev",
     "require": {
         "php": ">=8.1"
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/"
+        }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^10"
+    },
+    "scripts": {
+        "test": "phpunit --testdox tests/"
     }
 }
